<resources>
    <string name="app_name">Ministerio de Defensa</string>
    <string name="app_description">Bienvenidos a la plaforma del Ministerio de Defensa</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="register_email">Ingrese su email</string>
    <string name="register_mail_validation">Mail incorrecto, ingrese un mail Válido</string>
    <string name="register_password">Ingrese su password</string>
    <string name="register_dni">Ingrese su dni</string>
    <string name="register_date">Ingrese la fecha de emisión</string>
    <string name="register_success">Registrado exitosamente, Ahora puedes Ingresar a la aplicación</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_date">Fecha</string>
    <string name="user_dni">DNI</string>
    <string name="user_password_recovery">Olvide mi Password</string>
    <string name="condition">Para continuar con el servicio tu estas de acuerdo con las políticas de privacidad de la Aplicación</string>
    <string name="condition_service">Condiciones del Servicio</string>
    <string name="condition_service_description">Términos para la solicitud de Información Pública</string>
    <string name="condition_service_terms">Tienes derecho a acceder a la información pública de las instituciones del Estado según el principio de transparenciay el Texto Único Ordenado de la Ley Nº 27806, Ley de Transparencia y Acceso a la Información Públican.</string>
    <string name="condition_service_terms_second">Las entidades tienen 10 días hábiles para responderte y si no pudieran atenderte en ese tiempo por ser difícil de conseguir, tienen 02 días hábiles contados desde el día siguiente en que presentaste tu solicitud para decirte el día en que te puedes acercar a recogerla.</string>
    <string name="condition_service_terms_third"> Es importante que sepas que la entidad debe darte los motivos por los que no puede atenderte dentro del plazo.</string>
    <string name="condition_service_terms_fourth">Exepciones</string>
    <string name="condition_service_terms_fifth">Toma en cuenta que no puedes solicitar la siguiente información:</string>
    <string name="condition_service_terms_sixth">* Información que afecte la intimidad personal y/o familiar de otras personas.</string>
    <string name="condition_service_terms_seventh">* Información que involucre temas de inteligencia y/o seguridad nacional.</string>
    <string name="condition_service_terms_eighth">* Información clasificada en el ámbito militar.</string>
    <string name="condition_service_terms_ninth">* Información de negociaciones internacionales.</string>
    <string name="condition_service_terms_tenth">* Información protegida por el secreto bancario, tributario, comercial, industrial, tecnológico y bursátil.</string>
    <string name="condition_service_terms_eleventh">* Investigaciones en curso de la Administración Pública que se hayan iniciado hace menos de 6 meses sin que se haya dictado una resolución final.</string>
    <string name="condition_service_terms_twelfth">* Información de asesores jurídicos o abogados que puedan revelar la estrategia de la Entidad Pública ante un proceso administrativo o judicial.</string>
    <string name="condition_service_terms_fourteenth">* Información señalada por la Constitución o por una Ley aprobada por el Congreso de la República.</string>
    <string name="accept">Aceptar</string>
    <string name="request">Solicitud</string>
    <string name="request_subject">Descripción de la Solicitud</string>
    <string name="request_description">Escriba la descripción de su solicitud</string>
    <string name="request_information">Solicitud Información</string>
    <string name="request_type">Asunto de Solicitud</string>
    <string name="request_type_method">Ingrese Asunto del solicitud</string>
    <string name="request_means">Método de Entrega</string>
    <string name="request_send">Enviar Solicitud</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notificaciones</string>
    <string name="notifications_description">Revisa tus noficaciones aqui</string>
    <string name="profile">Profile</string>
    <string name="presentment">Libro de Reclamaciones</string>
    <string name="complain">Queja</string>
    <string name="claim">Reclamo</string>
    <string name="office">Oficina</string>
    <string name="register_complaint">Registrar Queja</string>
    <string name="register_claim">Registrar Reclamo</string>
    <string name="subject_complaint">Asunto de la Queja</string>
    <string name="subject_claim">Asunto del Reclamo</string>
    <string name="person_natural">Persona Natural</string>
    <string name="person_type">Tipo de Persona</string>
    <string name="person_dependency">Depedencia Laboral denunciado</string>
    <string name="add">Add</string>
    <string name="add_person">Agregar</string>
    <string name="accused">Personas Acusadas</string>
    <string name="anonymously">Anónima</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="Services">Servicios</string>
    <string name="services_description">Este es un listado de los servicios que podemos ofrecerte</string>
    <string name="virtual_procedures">Tramites Virtuales</string>
    <string name="enter_documents">Ingresar Documentos</string>
    <string name="tracking_procedures">Seguimiento de Tramites</string>
    <string name="tracking_procedures_description">Puedes darle seguimiento a los documentos enviados al Ministerio</string>
    <string name="enter_number">Ingresa Código</string>
    <string name="attention_phones">Lineas de atención</string>
    <string name="attention_phones_description">Listado de Directorios por Sedes</string>
    <string name="mindef_numbers">Números Mindef</string>
    <string name="public_information">Información Pública</string>
    <string name="public_information_access">Acceso Informacion Publica</string>
    <string name="public_information_description">Tiene derecho a acceder a la información pública de las instituciones del Estado según la Ley Nº 27806,Ley de Transparencia y Acceso a la Información Pública.</string>
    <string name="public_information_empty">Bandeja Vacía</string>
    <string name="public_information_waiting">Visualiza aqui tus solicitudes al acceso a la información</string>
    <string name="public_information_office">Oficina informante</string>
    <string name="search_information">Busca Información</string>
    <string name="white_book">Libro de Reclamaciones</string>
    <string name="enter_claim">Ingrese su reclamo</string>
    <string name="complaint">Denuncia por corrupción</string>
    <string name="enter_complaint">Ingrese Denuncia</string>
    <string name="impeachment">Denuncia por Corrupcion</string>
    <string name="impeachment_person">Agregar Denunciado</string>
    <string name="impeachment_person_position">Cargon del Denunciado</string>
    <string name="impeachment_person_name">Nombres del Denunciado</string>
    <string name="impeachment_person_second">Apellidos del Denunciado</string>
    <string name="impeachment_description">Las denuncias pueden ser presentadas por toda persona natural o jurídica que advierta el acciona doloso por parte de un funcionario y/o servidor público del ministerio. </string>
    <string name="impeachment_waiting">Visualizaras tus denuncias aqui, Aún no presentas denuncias</string>
    <string name="impeachment_type">Tipo de Denuncia</string>
    <string name="impeachment_subject">Descripción de la denuncia</string>
    <string name="impeachment_subject_description">Describa la denuncia</string>
    <string name="impeachment_send">Enviar Denuncia</string>
    <string name="inbox">inbox</string>
    <string name="document">Documento</string>
    <string name="document_answer">Documento Respuesta</string>
    <string name="document_answer_select">Ver Respuestas</string>
    <string name="document_answer_source">ir Documento Origen</string>
    <string name="document_preview">Documento Vista Previa</string>
    <string name="document_track">Código del Documento</string>
    <string name="document_track_description">Ingrese el código del Documento</string>
    <string name="document_pdf">Documento PDF</string>
    <string name="document_state_pending">Documento con Estado Pendiente</string>
    <string name="documents">Mis documentos</string>
    <string name="responses">Mis Respuestas</string>
    <string name="preview">Ver</string>
    <string name="create">crear</string>
    <string name="arrow">Flecha</string>
    <string name="create_document">Crear Documento</string>
    <string name="document_type">Tipo de documento</string>
    <string name="title_document">Título del Documento</string>
    <string name="id_document">Id del Documento</string>
    <string name="subject_document">Asunto del Documento</string>
    <string name="subject">Asunto</string>
    <string name="warning">Error en el registro</string>
    <string name="warning_login">Error de Login, Compruebe sus Datos</string>
    <string name="warning_splash">Error de conexion, comprueba si tienes Internet</string>
    <string name="warning_response">Error en al respuesta del servidor</string>
    <string name="warning_search">Error en la busqueda del codigo</string>
    <string name="warning_pdf">Error en la busqueda del PDF</string>
    <string name="attach">Adjuntar</string>
    <string name="attach_document">Tocar para adjuntar un pdf</string>
    <string name="attach_document_description">Tus archivos aparecerán aquí, recuerda que solo formato PDF y como maximo 5 archivos</string>
    <string name="attach_image">Adjuntar Imagen</string>
    <string name="attach_image_description">Adjunta una photo o una imagen</string>
    <string name="attached">Anexos</string>
    <string name="attached_document">Documento Adjuntado</string>
    <string name="send_document">Enviar Documento</string>
    <string name="sending_document">0 Documentos por Enviar</string>
    <string name="sending_empty">Documentos PDF vacios</string>
    <string name="sending_person_impeachment_name_empty">El campo de Nombre de la Persona esta vacío, se necesita un referencia</string>
    <string name="sending_person_impeachment_position_empty">El campo del Cargo del denunciado esta vacío, se necesita un referencia</string>
    <string name="sending_person_impeachment_second_name_empty">El Campo de Apellidos esta cacio, se necesita una referencia</string>
    <string name="sending_person_impeachment_dependency">Debes de seleccionar una Dependencia Laboral, o selecciona "otros"</string>
    <string name="upload_successful">Documentos Enviados Correctamente</string>
    <string name="upload_wrong">Documentos No Enviados, vuelve a intentar</string>
    <string name="upload_wrong_subject">El asunto debe de tener mas de 11 caracteres</string>
    <string name="uploading_documents">Subiendo Archivos</string>
    <string name="size_document">Tamaño Documento</string>
    <string name="locate_document">Ubicar Documento</string>
    <string name="status_document_completed">Documento Revisado</string>
    <string name="message_document_answer">Este documento es una respuesta, puedes verificar su documento de Origen a Continuación</string>
    <string name="inbox_empty">Bandeja Vacía</string>
    <string name="inbox_waiting">Visualizaras tus documentos aqui, Aún no envias documentos</string>
    <string name="inbox_refresh">Bandeja Actualizada</string>
    <string name="reply_waiting">Visualizaras las respuestas a tus documentos aquí, Aun no recibes ningun respuesta</string>
    <string name="desk_reception">Mesa de Partes</string>
</resources>