<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PublicInformationCreateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:backgroundTint="@color/colorRed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/arrowPublicInformationCreate"
                    android:layout_width="74dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="-20dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/ic_arrow_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/arrowPublicInformationCreate"
                    android:text="@string/public_information"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/sVPublicInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/person_type"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rect_edt_text">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/person_natural"
                    android:padding="12dp"
                    android:src="@drawable/ic_contact_mail"
                    android:tint="@color/colorBlack" />

                <Spinner
                    android:id="@+id/spVTypePersonPublicInformation"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="24dp"
                    android:prompt="@string/document_type" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/office"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rect_edt_text">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_email"
                    android:padding="12dp"
                    android:src="@drawable/ic_office"
                    android:tint="@color/colorBlack" />

                <Spinner
                    android:id="@+id/spVOfficePublicInformation"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="24dp"
                    android:prompt="@string/document_type" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/request_means"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rect_edt_text">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/register_email"
                    android:padding="12dp"
                    android:src="@drawable/ic_shipping"
                    android:tint="@color/colorBlack" />

                <Spinner
                    android:id="@+id/spVMethodPublicInformation"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="24dp"
                    android:prompt="@string/document_type" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/request_type"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSubjectPublicInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:autofillHints="@string/request_type_method"
                android:background="@drawable/rect_edt_text"
                android:drawableStart="@drawable/ic_contact_mail"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorBlack"
                android:fontFamily="@font/robotoligth"
                android:hint="@string/request_type_method"
                android:padding="12dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/request_subject"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPublicInformationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:autofillHints="@string/request_description"
                android:background="@drawable/rect_edt_text"
                android:drawableStart="@drawable/ic_subject"
                android:fontFamily="@font/robotoligth"
                android:hint="@string/request_description"
                android:inputType="textMultiLine"
                android:padding="12dp" />

            <Button
                android:id="@+id/btnVPublicInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@color/colorRed"
                android:text="@string/request_send"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieVUploadPublicInformation"
        android:layout_width="194dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/upload" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieVErrorPublicInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/error" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieVSuccessPublicInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/success" />

    <TextView
        android:id="@+id/txtVPublicInformationWait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/uploading_documents"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtVPublicInformationSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upload_successful"
        android:textColor="@color/success_upload"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtVPublicInformationError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upload_wrong"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>